--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,105 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+img,a {
+	border:none;
+	outline:0;
+}
+@import url(http://fonts.googleapis.com/css?family=Lato:100);
 * {
 	padding:0;
 	margin:0;
 }
-
+html {
+	background: url(../images/base-background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 .wrapper {
 	width: 1024px;
 	height: auto;
 	margin:0 auto;
+}
+
+.top-div {	
+	height: 50px;
+	width: 100%;
+	background:#282828;
+}
+
+.header {
+	width: 100%;
+	height: 50px;
+}
+.img-base-a {
+
+	margin:26px 0 0 34px;
+}
+
+.base-left-n {
+	width: 512px;
+	height: auto;
+	float:left;
+}
+
+.img-base-logo {	
+	margin:117px 0 0 90px;
+}
+.base-right-n {
+	width: 512px;
+	height: auto;
+	float: right;
+}
+.base-right-n h1 {
+	margin-top:117px;
+	font-size:90px;
+	color:#3a3a3a;
+}
+.base-right-n h2 {
+	color:#858585;
+	margin-left:100px;
+	font-size:36px;
+}
+
+.base-right-n h3 {
+	color:#292929;
+	font-size:60px;
+	margin-left:200px;
+	font-weight:bold;
+}
+
+.base-button-hali button{
+	border:none;
+	width: 454px;
+	height: 101px;
+	background:#252525;
+	color:#eaeaea;
+	font-size:36px;
+	margin-top:20px;
+	cursor:pointer;
+	font-weight: bold;
+}
+
+
+
+/*footer*/
+.footer p {
+	font-size: 15px;
+	color:#f2f2f2;
+	font-weight: bold;
+	margin:32px 0 0 0;
+}
+.bottom-div {
+	position:fixed;
+	bottom:0;
+	height: 76px;
+	width: 100%;
+	background:#252525;
+}
+
+.clearfixed{
+	clear:both;
 }
